Change Bundle Version Code to 2 to meet the required version in the Meta Quest 3

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ UserSettings/
 Logs/
 
 Release/
-
+Samples/
+Samples.meta
+.utmp/
 
 # Volume Rendering Package specific ignores (remove if something breaks)
 Assets/UnityVolumeRendering-master/UnityVolumeRendering-master/Assets/3rdParty
